# YggdrasillEnterprises

./: README.md
myHelloWorldProgram/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
myHelloWorldProgram/src/YggdrasillEnterprises/: CMakeLists.txt
myHelloWorldProgram/src/YggdrasillEnterprises/HeaderFiles/: IncludesHeader.h  IterationsCheckingFunctionDeclaration.h  PrintFWrapperFunctionWrapperDeclaration.h  StrNCpyWrapperFunctionWrapperDeclaration.h  TypeDefinitionsHeader.h
myHelloWorldProgram/src/YggdrasillEnterprises/SourceFiles/: .IterationsCheckingFunctionDefinition.c.swp  .PrintFWrapperFunctionWrapperDefinition.c.swp  .StrNCpyWrapperFunctionWrapperDefinition.c.swp  .enterprise.c.swp  IterationsCheckingFunctionDefinition.c  MainProgram.c  PrintFWrapperFunctionWrapperDefinition.c  StrNCpyWrapperFunctionWrapperDefinition.c
